--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24"
   },
   "prettier": "@spotify/prettier-config",
   "lint-staged": {
