--- a/package.json
+++ b/package.json
@@ -64,11 +64,11 @@
   "prettier": "@spotify/prettier-config",
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix"
     ],
     "*.{json,md}": [
       "prettier --write"
     ]
-  }
+  },
+  "homepage": "."
 }
