--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,6 +63,7 @@
     "no-unused-vars": "off",
     "implicit-arrow-linebreak": "off",
     "react/jsx-curly-newline": "off",
-    "react/function-component-definition": "off"
+    "react/function-component-definition": "off",
+    "no-param-reassign": "warn"
   }
 }
